# objimport

./: .gitignore  CMakeLists.txt  LICENSE  helper_functions.hpp  main.cpp  main.py  model.mtl  model.obj.pickle  mtldata.cpp  mtldata.hpp  mtlparser.cpp  mtlparser.hpp  objdata.cpp  objdata.hpp  objdatatypes.hpp  objexporter.py  objimport.cpp  objparser.cpp  objparser.hpp  objprocessor.py  objreader.cpp  objreader.hpp  objreader.py  objscanner.cpp  objscanner.hpp  parser.cpp  parser.hpp  progressbar.py
tests/: test_scanner.cpp
